# libIntegrate

./: .gitignore  .vimrc  CMakeLists.txt  CMakeLists.txt.bak  LICENSE.md  README.md  conanfile.py  conanfile.txt  justfile  releases.txt  version.cmake
applications/: CMakeLists.txt  README.md  conanfile.py  integrate-cli.cpp
cmake/Modules/: GitVersion.cmake  README.md  macro-find_project_dependency.cmake  macro-git_version.cmake
doc/: .gitignore  HOWTOS.md  README.md
doc/writeups/: .gitignore  README.md
doc/writeups/SimpsonsRule/: NonUniformGrids.aux  NonUniformGrids.tex
scripts/utils/: tag-release.sh
src/: Integrate.hpp  README.md  libIntegrate_version.h
src/Definite/: AdaptiveQuadrature.hpp  TrapezoidRule.hpp
src/Experimental/_1D/GaussianQuadratures/: GaussLegendre.hpp
src/_1D/: AdaptiveQuadrature.hpp  RecursiveAdaptiveQuadrature.hpp  RiemannRule.hpp  SimpsonRule.hpp  TrapezoidRule.hpp
src/_1D/GaussianQuadratures/: GaussLegendre.hpp
src/_2D/: GaussianQuadrature.hpp  RiemannRule.hpp
src/_2D/GaussianQuadratures/: GaussLegendre.hpp
src/libIntegrate/: IO.hpp  Integrate.hpp  Utils.hpp  version.h.in
src/libIntegrate/Experimental/: README.md
src/libIntegrate/Experimental/_1D/GaussianQuadratures/: GaussLegendre.hpp
src/libIntegrate/_1D/: RandomAccessLambda.hpp  RiemannRule.hpp  SimpsonRule.hpp  SubscriptFunction.hpp  SubscriptLambda.hpp  TrapezoidRule.hpp  Utils.hpp
src/libIntegrate/_1D/Boost/: GaussKronrod.hpp
src/libIntegrate/_1D/GaussianQuadratures/: GaussLegendre.hpp
src/libIntegrate/_2D/: DiscretizedIntegratorWrapper.hpp  RandomAccessLambda.hpp  RiemannRule.hpp  SimpsonRule.hpp  TrapezoidRule.hpp  Utils.hpp
src/libIntegrate/_2D/GaussianQuadratures/: GaussLegendre.hpp
swig/: CMakeLists.txt  README.md
testing/: CMakeLists.txt  README.md  pre-tag-release.sh  test-install.sh
testing/CatchTests/: 2DIntegration.cpp  2DIntegratorWrappers.cpp  AdaptiveQuadratureTests.cpp  BoostUnitsTests.cpp  Bugs.cpp  Demos.cpp  Devel.cpp  GaussianQuadratureTests.cpp  IO.cpp  RandomAccessLambda.cpp  RecursiveAdaptiveQuadratureTests.cpp  RiemannRuleTests.cpp  SimpsonRuleTests.cpp  SubscriptLambdas.cpp  TrapezoidRuleTests.cpp  Utils.cpp
testing/CatchTests/Boost/: GaussKronrodQuadratureTests.cpp
testing/CatchTests/Experimental/: GaussianQuadratureTests.cpp
testing/client_project/: CMakeLists.txt  example.cpp
testing/data/: README.md  exponential_decay.txt  exponential_decay_2d.txt
util-scripts/: save-tags.sh  tag-release.sh
